@@ -6,19 +6,22 @@
 from coverage.backward import pickle
 from coverage.data import CoverageData
 
-def pickle_read_raw_data(cls, file_obj):
+
+def pickle_read_raw_data(cls_unused, file_obj):
+    """Replacement for CoverageData._read_raw_data."""
     return pickle.load(file_obj)
 
+
 def pickle2json(infile, outfile):
+    """Convert a coverage.py 3.x pickle data file to a 4.x JSON data file."""
     try:
         old_read_raw_data = CoverageData._read_raw_data
         CoverageData._read_raw_data = pickle_read_raw_data
 
         covdata = CoverageData()
 
-        inf = open(infile, 'rb')
-        covdata.read(inf)
-        inf.close()
+        with open(infile, 'rb') as inf:
+            covdata.read(inf)
 
         covdata.write_file(outfile)
     finally:
@@ -30,10 +33,14 @@ if __name__ == "__main__":
 
     parser = OptionParser(usage="usage: %s [options]" % __file__)
     parser.description = "Convert .coverage files from pickle to JSON format"
-    parser.add_option("-i", "--input-file", action="store", default=".coverage",
-                        help="Name of input file. Default .coverage")
-    parser.add_option("-o", "--output-file", action="store", default=".coverage",
-                        help="Name of output file. Default .coverage")
+    parser.add_option(
+        "-i", "--input-file", action="store", default=".coverage",
+        help="Name of input file. Default .coverage",
+    )
+    parser.add_option(
+        "-o", "--output-file", action="store", default=".coverage",
+        help="Name of output file. Default .coverage",
+    )
 
     (options, args) = parser.parse_args()
 
